# inflecv

./: .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  HANDOVER.md  LICENSE  README.md  STATUS.md  VERIFICATION.md  justfile  pyproject.toml
.agents/skills/job-application/: SKILL.md
.agents/skills/job-application/templates/: cv-adapted-template.typ
.agents/skills/job-application/workflows/: job-analyze.md  job-cv.md  job-fit.md
.github/workflows/: ci.yml
data/applications/john-doe-example/: README.md  analysis.md  fit-report.md  job-posting.md
docs/: GIT_WORKFLOW.md  brownfield-install.md
docs/decisions/: 0001-scoping.md  0002-drop-task-management.md  0003-cv-as-instance-migration.md
scripts/: install.sh
scripts/job_analyze/: __init__.py  company_research.py  extractors.py  parser.py  patterns.py  report.py  types.py
scripts/job_analyze/tests/: __init__.py  test_company_research.py  test_parser.py  test_report.py  test_types.py
scripts/job_fit/: __init__.py  report.py  scorer.py  types.py
scripts/job_fit/tests/: __init__.py  test_report.py  test_scorer.py  test_types.py
scripts/lib/: __init__.py  context.py  dates.py  metadata.py  result.py  types.py
scripts/tests/: test_lib.py
scripts/verification/: __init__.py  __main__.py  build.py  dates.py  format.py  runner.py
scripts/verification/tests/: conftest.py  test_build.py  test_dates.py  test_format.py  test_runner.py
src/: cv-data.typ  cv.typ  neat-cv-local.typ
src/shared/: config.typ  sidebar.typ
