[project]
name = "inflecv"
version = "0.1.0"
description = "Per-application CV pipeline: analyze job offers, score fit, adapt your CV, journal applications."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Bastien Gallay" },
]
requires-python = ">=3.11"
keywords = ["cv", "resume", "typst", "job-application", "ai-agent", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/bastien-gallay/inflecv"
Issues    = "https://github.com/bastien-gallay/inflecv/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mutmut>=2.4.0,<3.0.0",
]

[tool.pytest.ini_options]
testpaths = [
    "scripts/tests",
    "scripts/verification/tests",
    "scripts/job_analyze/tests",
    "scripts/job_fit/tests",
]
pythonpath = ["."]

[tool.coverage.run]
source = ["scripts"]
omit = ["scripts/*/tests/*", "scripts/tests/*"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
# Target: 80%, current: 63% - modules CLI (0% coverage) need dedicated tests
fail_under = 63

[tool.mutmut]
paths_to_mutate = "scripts/lib/"
tests_dir = "scripts/"
runner = "python -m pytest -x"

[tool.ruff]
target-version = "py311"
line-length = 100
